--- a/Cargo.toml
+++ b/Cargo.toml
@@ -702,6 +702,7 @@ walkdir = "2.3.3"
 vergen-git2 = "1.0.5"
 
 [patch.crates-io]
+alloy-chains = { git = "https://github.com/kadena-io/alloy-rs-chains", branch = "kadena-chains", default-features = false }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", branch = "main" }
